# leanMultisig

./: CLAUDE.md  Cargo.toml  FORWARD_PORT_PLAN.md
crates/backend/air/src/: lib.rs  symbolic.rs
crates/backend/fiat-shamir/: Cargo.toml
crates/backend/fiat-shamir/src/: blake3_permutation.rs  lib.rs  verifier.rs
crates/backend/field/src/: field.rs
crates/lean_compiler/: snark_lib.py  zkDSL.md
crates/lean_compiler/src/: b_compile_intermediate.rs  c_compile_final.rs  grammar.pest  instruction_encoder.rs  lang.rs
crates/lean_compiler/tests/: test_compiler.rs
crates/lean_prover/: Cargo.toml
crates/lean_prover/python-verifier/: verifier.py
crates/lean_prover/src/: lib.rs  preload_ffi.rs  prove_execution.rs  trace_gen.rs  verify_execution.rs
crates/lean_vm/: Cargo.toml
crates/poseidon_gkr/src/: prove.rs  verify.rs  witness_gen.rs
crates/rec_aggregation/: Cargo.toml
crates/rec_aggregation/src/: compilation.rs  lib.rs  type_1_aggregation.rs  type_2_aggregation.rs
crates/rec_aggregation/zkdsl_implem/: fiat_shamir.py  hashing.py  main.py  recursion.py  utils.py  whir.py  xmss_aggregate.py
crates/sub_protocols/src/: air_sumcheck.rs  lib.rs  logup.rs  stacked_pcs.rs
crates/sub_protocols/tests/: prove_poseidon.rs  prove_poseidon_16.rs  soundness_logup.rs
crates/utils/: Cargo.toml
crates/utils/src/: blake3_hash.rs  lib.rs  wrappers.rs  xor_table.rs
crates/whir/: Cargo.toml
crates/whir/src/: commit.rs  config.rs  dft.rs  lib.rs  matrix.rs  merkle.rs  open.rs  utils.rs
crates/xmss/src/: wots.rs  xmss.rs
src/: main.rs
(+72 files in other folders)
