[package]
name = "lean_prover"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
prox-gaps-conjecture = []
zkalloc = ["dep:zk-alloc"]
zkalloc_preload = []

[dependencies]
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true
xmss.workspace = true
rand.workspace = true

tracing.workspace = true
sub_protocols.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
backend.workspace = true
itertools.workspace = true
rayon.workspace = true
zk-alloc = { path = "../../zk-alloc", optional = true }

[dev-dependencies]
xmss.workspace = true
rec_aggregation.workspace = true
